# OverflowProject

./: CMakeLists.txt  README.md  UML.drawio  info.xml
approot/: base.xml  form_input.xml
include/: home.h  menu.h
lib/Front/: CMakeLists.txt
lib/Front/include/: object_widget.h  searchbox.h  server.h  settings.h
lib/Front/src/: server.cpp  settings.cpp
lib/Front/tests/include/: test.h
lib/Front/tests/src/: test.cpp
src/: home.cpp  main.cpp  menu.cpp  settings.cpp
